--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -1,6 +1,5 @@
 .dashboard {
     display: flex;
-    height: 100vh;
 }
 
 .sidebar {
@@ -24,6 +23,16 @@
     cursor: pointer;
 }
 
+.sidebar ul li a {
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+.sidebar ul li a:hover {
+    color: red;
+}
+
 .main {
     flex: 1;
     display: flex;
@@ -36,6 +45,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    width: calc(100% - 300px);
+    top: 0;
+    z-index: 1000;
 }
 
 .dashboard-content {
@@ -43,6 +56,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    margin-top: 100px;
+    height: 200px;
 }
 
 .card {
@@ -50,4 +65,29 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.bar-chart-container {
+    margin-top: 30px;
+    width: 100%;
+    max-width: 700px;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.chart-row {
+    display: flex;
+    gap: 20px;
+}
+
+.pie-chart-container,
+.line-chart-container {
+    flex: 1;
+    max-width: 400px;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
